All Commits are Bug fixes Added Game 4 GrabTheCrown